--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           </a>
           <div class="nav-items">
             <a class="nav-item" href="#product">Product</a>
-            <a class="nav-item" href="#customer">Customers</a>
+            <a class="nav-item" href="#customer">Customer</a>
             <a class="nav-item" href="#pricing">Pricing</a>
-            <a class="nav-item" href="#">Resources</a>
+            <a class="nav-item" href="#resources">Resources</a>
             <a class="nav-item" href="#">Sign In</a>
             <a class="nav-item" href="#">Sign Up</a>
             <button id="dark-light">
@@ -122,10 +122,10 @@
           </div>
         </div>
       </section>
-      <section class="customer" id="customer">
+      <section class="resources" id="resources">
         <div class="container">
-          <div class="customer_cards">
-            <div class="customer_card">
+          <div class="resources_cards">
+            <div class="resources_card">
               <b>Optimisation for</b>
               <h4>Management</h4>
               <p>
@@ -144,13 +144,13 @@
                 won’t cost you more money,
               </p>
             </div>
-            <div class="customer_card">
+            <div class="resources_card">
               <img src="./images/document.png" alt="img" />
             </div>
-            <div class="customer_card">
+            <div class="resources_card">
               <img src="./images/search-comp.png" alt="img" />
             </div>
-            <div class="customer_card">
+            <div class="resources_card">
               <b>Easier decision making for</b>
               <h4>Customer Support</h4>
               <p>
@@ -159,11 +159,11 @@
                 personality of the person.
               </p>
 
-              <div class="customer-text">
+              <div class="resources-text">
                 <img src="./images/check-orange.svg" alt="icon" />
                 <p>Never worry about overpaying for your energy again.</p>
               </div>
-              <div class="customer-text">
+              <div class="resources-text">
                 <img src="./images/check-red.svg" alt="icon" />
                 <p>
                   We will only switch you to energy companies that we trust and
@@ -171,14 +171,14 @@
                 </p>
               </div>
 
-              <div class="customer-text">
+              <div class="resources-text">
                 <img src="./images/check-blue.svg" alt="icon" />
                 <p>
                   We track the markets daily and know where the savings are.
                 </p>
               </div>
             </div>
-            <div class="customer_card">
+            <div class="resources_card">
               <b>Optimisation for</b>
               <h4>Collaborative</h4>
               <p>
@@ -197,7 +197,7 @@
                 won’t cost you more money,
               </p>
             </div>
-            <div class="customer_card">
+            <div class="resources_card">
               <img src="./images/file-img.png" alt="img" />
             </div>
           </div>
@@ -275,16 +275,254 @@
         <div class="container">
           <div class="pricing-content">
             <h6>Price Table</h6>
-            <p>We offer competitive price</p>
+            <p class="title_price">We offer competitive price</p>
             <div class="pricing_cards">
               <div class="pricing_card">
                 <h6>Free</h6>
+                <p class="price_title">Brief price description</p>
+                <p class="price__">0 <sup>%</sup><sub>Per / month</sub></p>
+                <p class="price_text">Only 2 Operators</p>
+                <p class="price_text">Notifications</p>
+                <p class="price_text">Landing Pages</p>
+                <div class="price_btns">
+                  <a href="#" class="price_btn">Order Now</a>
+                </div>
+              </div>
+              <div class="pricing_card">
+                <h6>Standard</h6>
+                <p class="price_title">Brief price description</p>
+                <p class="price__">5 <sup>%</sup><sub>Per / month</sub></p>
+                <p class="price_text">5+ Operators</p>
+                <p class="price_text">Notifications</p>
+                <p class="price_text">Landing Pages</p>
+                <div class="price_btns">
+                  <a href="#" class="price_btn">Order Now</a>
+                </div>
+              </div>
+              <div class="pricing_card">
+                <h6>Premium</h6>
+                <p class="price_title">Brief price description</p>
+                <p class="price__">10 <sup>%</sup><sub>Per / month</sub></p>
+                <p class="price_text">10+ Operators</p>
+                <p class="price_text">Notifications</p>
+                <p class="price_text">Landing Pages</p>
+                <div class="price_btns">
+                  <a href="#" class="price_btn">Order Now</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="customer" id="customer">
+        <div class="container">
+          <div class="customer-content">
+            <h6>What Clients Say</h6>
+            <p>
+              Problems trying to resolve the conflict between the two major
+              realms of Classical physics: Newtonian mechanics
+            </p>
+            <div class="customer_cards">
+              <div class="customer_card">
+                <img src="./images/star.svg" alt="icon" />
+                <p class="customer_text">
+                  Product helps you see how many more days you need to work to
+                  reach your financial goal.
+                </p>
+                <div class="custo_card">
+                  <img src="./images/customer-1.svg" alt="img" />
+                  <div class="custo_text">
+                    <h6 class="custo_title">Wahid Ari</h6>
+                    <b>Designer</b>
+                  </div>
+                </div>
+              </div>
+              <div class="customer_card">
+                <img src="./images/star.svg" alt="icon" />
+                <p class="customer_text">
+                  Product helps you see how many more days you need to work to
+                  reach your financial goal.
+                </p>
+                <div class="custo_card">
+                  <img src="./images/customer-2.svg" alt="img" />
+                  <div class="custo_text">
+                    <h6 class="custo_title">Wahid Ari</h6>
+                    <b>Designer</b>
+                  </div>
+                </div>
+              </div>
+              <div class="customer_card">
+                <img src="./images/star.svg" alt="icon" />
+                <p class="customer_text">
+                  Product helps you see how many more days you need to work to
+                  reach your financial goal.
+                </p>
+                <div class="custo_card">
+                  <img src="./images/customer-3.svg" alt="img" />
+                  <div class="custo_text">
+                    <h6 class="custo_title">Wahid Ari</h6>
+                    <b>Designer</b>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="business">
+        <div class="container">
+          <div class="business-content">
+            <div class="business_cards">
+              <div class="business_card">
+                <h6>
+                  Join 100 Compannies who boost their business with Product
+                </h6>
+                <div class="business_btns">
+                  <a href="#" class="business_btn">Get This</a>
+                </div>
+              </div>
+              <div class="business_card">
+                <img src="./images/business-img.png" alt="img" />
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
+    <footer>
+      <div class="container">
+        <div class="footer-content">
+          <div class="foot_cards">
+            <div class="foot_card">
+              <img src="./images/Logo.1.svg" alt="logo" />
+              <div class="site_links">
+                <p>
+                  <a href="https://www.instagram.com/" class="links">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="25"
+                      viewBox="0 0 24 25"
+                      fill="none"
+                    >
+                      <path
+                        d="M17 2.01611H7C4.23858 2.01611 2 4.25469 2 7.01611V17.0161C2 19.7775 4.23858 22.0161 7 22.0161H17C19.7614 22.0161 22 19.7775 22 17.0161V7.01611C22 4.25469 19.7614 2.01611 17 2.01611Z"
+                        stroke="#02897A"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M16 11.3862C16.1234 12.2184 15.9813 13.0684 15.5938 13.8152C15.2063 14.562 14.5932 15.1676 13.8416 15.5458C13.0901 15.9241 12.2385 16.0558 11.4078 15.9221C10.5771 15.7884 9.80977 15.3963 9.21485 14.8013C8.61993 14.2064 8.22774 13.439 8.09408 12.6084C7.96042 11.7777 8.09208 10.9261 8.47034 10.1745C8.8486 9.42302 9.4542 8.80991 10.201 8.42241C10.9478 8.03491 11.7978 7.89276 12.63 8.01617C13.4789 8.14206 14.2649 8.53763 14.8717 9.14448C15.4785 9.75132 15.8741 10.5372 16 11.3862Z"
+                        stroke="#02897A"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M17.5 6.51611H17.51"
+                        stroke="#02897A"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </a>
+                </p>
+                <p>
+                  <a href="https://ru-ru.facebook.com/" class="links">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                    >
+                      <path
+                        d="M18 2H15C13.6739 2 12.4021 2.52678 11.4645 3.46447C10.5268 4.40215 10 5.67392 10 7V10H7V14H10V22H14V14H17L18 10H14V7C14 6.73478 14.1054 6.48043 14.2929 6.29289C14.4804 6.10536 14.7348 6 15 6H18V2Z"
+                        stroke="#02897A"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </a>
+                </p>
+                <p>
+                  <a href="https://twitter.com/?lang=ru" class="links">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="40"
+                      height="40"
+                      viewBox="0 0 40 40"
+                      fill="none"
+                    >
+                      <circle cx="20" cy="20" r="20" fill="#EDFFFC" />
+                      <path
+                        d="M31 11.0101C30.0424 11.6855 28.9821 12.2022 27.86 12.5401C27.2577 11.8476 26.4573 11.3567 25.567 11.134C24.6767 10.9112 23.7395 10.9673 22.8821 11.2945C22.0247 11.6218 21.2884 12.2045 20.773 12.9638C20.2575 13.7231 19.9877 14.6224 20 15.5401V16.5401C18.2426 16.5856 16.5013 16.1959 14.931 15.4055C13.3607 14.6151 12.0103 13.4487 11 12.0101C11 12.0101 7 21.0101 16 25.0101C13.9405 26.408 11.4872 27.109 9 27.0101C18 32.0101 29 27.0101 29 15.5101C28.9991 15.2315 28.9723 14.9537 28.92 14.6801C29.9406 13.6735 30.6608 12.4028 31 11.0101V11.0101Z"
+                        stroke="#02897A"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </a>
+                </p>
+              </div>
+            </div>
+
+            <div class="foot_card">
+              <ul>
+                <li>
+                  <h6>Resource</h6>
+                </li>
+                <li>
+                  <a href="#">About Us </a>
+                </li>
+                <li>
+                  <a href="#">Blog</a>
+                </li>
+                <li>
+                  <a href="#">Contact</a>
+                </li>
+                <li>
+                  <a href="#">FAQ</a>
+                </li>
+              </ul>
+            </div>
+            <div class="foot_card">
+              <ul>
+                <li>
+                  <h6>Legal Stuff</h6>
+                </li>
+                <li>
+                  <a href="#">Disclaimer </a>
+                </li>
+                <li>
+                  <a href="#">Financing</a>
+                </li>
+                <li>
+                  <a href="#">Privacy Policy</a>
+                </li>
+                <li>
+                  <a href="#">Terms of Service </a>
+                </li>
+              </ul>
+            </div>
+            <div class="foot_card">
+              <div class="foot_card_content">
+                <h6>knowing you're always on the best energy deal.</h6>
+                <form class="foot_form">
+                  <input type="text" name="text" id="text" required />
+                  <button type="submit">Sign up Now</button>
+                </form>
+              </div>
+            </div>
+          </div>
+          <p>Made With Love By Figmaland All Right Reserved</p>
+        </div>
+      </div>
+    </footer>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
